// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Questions snapshot test @questionsLoading is falsy 1`] = `
<div>
  <UNDEFINED
    language="en"
    title="Questions"
  />
  <InjectIntl(Component)
    communityIdFilter={1}
    followedCommunities={null}
    parentPage="parentPage"
  />
  <UNDEFINED
    followedCommunities={null}
    isFeed={false}
  />
</div>
`;

exports[`Questions snapshot test @questionsLoading is true 1`] = `
<div>
  <UNDEFINED
    language="en"
    title="Questions"
  />
  <InjectIntl(Component)
    communityIdFilter={1}
    followedCommunities={null}
    parentPage="parentPage"
  />
  <UNDEFINED />
</div>
`;
